# youtube-email-automation

./: .gitignore  README.md  email_report.py  main.py  pyproject.toml  requirements.txt  youtube_full_pipeline.py
