[project]
name = "youtube-email"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==26.1.0",
    "browser-cookie3==0.20.1",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "cryptography==46.0.5",
    "et-xmlfile==2.0.0",
    "feedparser==6.0.12",
    "google-api-core==2.30.0",
    "google-api-python-client==2.193.0",
    "google-auth==2.49.1",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.3.0",
    "googleapis-common-protos==1.73.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httplib2==0.31.2",
    "idna==3.11",
    "lz4==4.4.5",
    "numpy==2.4.3",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "outcome==1.3.0.post0",
    "pandas==3.0.1",
    "playwright==1.58.0",
    "proto-plus==1.27.1",
    "protobuf==6.33.6",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pyee==13.0.1",
    "pyparsing==3.3.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pywin32==311",
    "requests==2.33.0",
    "requests-oauthlib==2.0.0",
    "selenium==4.41.0",
    "sgmllib3k==1.0.0",
    "shadowcopy==0.0.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.33.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
    "wmi==1.5.1",
    "wsproto==1.3.2",
    "yt-dlp==2026.3.17",
]
